summer-k8s/istio/virtualservice/virtualservice-ab-route.yaml
# See more at https://istio.io/blog/2017/0.1-canary/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: abtest
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 90
    - destination:
        host: reviews
        subset: v2
      weight: 10
