summer-k8s/istio/virtualservice/virtualservice-fault-injection.yaml
# See more at https://istio.io/docs/tasks/traffic-management/fault-injection/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - fault:
      delay:
        fixedDelay: 5s
        percentage:
          value: 100
    match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: ratings
        subset: v1
