summer-k8s/istio/virtualservice/virtualservice-retry.yaml
# See more at https://istio.io/blog/2017/0.1-canary/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - route:
    - destination:
        host: ratings
        subset: v1
      weight: 90
    - destination:
        host: ratings
        subset: v2
      weight: 10
    retries:
      attempts: 3
      perTryTimeout: 2s
